--- a/ClientApp/src/app/components/books/books.component.html
+++ b/ClientApp/src/app/components/books/books.component.html
@@ -27,7 +27,7 @@
             <td>{{book.dateRead ? "Read" : book.dateStart ? "In Progress" : "Not Started"}}</td>
             <td>
                 <button type="button" class="btn btn-default btn-sm" (click)="showBook(book.id)">Show</button>
-                <button type="button" class="btn btn-success btn-sm" (click)="updateBook(book.id)">Update</button>
+                <button type="button" class="btn btn-success btn-sm mx-2" (click)="updateBook(book.id)">Update</button>
                 <button type="button" class="btn btn-danger btn-sm" (click)="deleteBook(book.id)">Delete</button>
                 
             </td>
