--- a/ClientApp/src/app/components/update-book/update-book.component.html
+++ b/ClientApp/src/app/components/update-book/update-book.component.html
@@ -1,5 +1,6 @@
 <div class="update-book">
     <form  #form="ngForm" (ngSubmit)="onSubmit()">
+        
         <div class="form-group">
             <label for="title" class="required">Title</label>
             <input type="text" class="form-control" id="title" placeholder="Book Title" 
@@ -8,6 +9,7 @@
                 <div *ngIf="title.errors?.['required']">Title is required.</div>
             </div>
         </div>
+
         <div class="form-group">
             <label for="author" class="required">Author</label>
             <input type="text" class="form-control" id="author" placeholder="Book Author" 
@@ -16,6 +18,7 @@
                 <div *ngIf="author.errors?.['required']">Author is required.</div>
             </div>
         </div>
+
         <div class="form-group">
             <label for="description" class="required">Description</label>
             <textarea type="text" class="form-control" id="description" placeholder="Book Description" 
@@ -25,26 +28,33 @@
                 <div *ngIf="description.errors?.['required']">Description is required.</div>
             </div>
         </div>
+
         <div class="row">
             <div class="col-md-4 col-xs-4 col-sm-4">
                 <div class="form-group">
                     <label for="dateStart">Date start</label>
-                    <input type="date" class="form-control" id="dateStart" placeholder="Date Start" name="dateStart" [(ngModel)]="updateBookForm.dateStart">
+                    <input type="date" class="form-control" id="dateStart" placeholder="Date Start" 
+                    name="dateStart" [(ngModel)]="updateBookForm.dateStart">
                 </div>
             </div>
+
             <div class="col-md-4 col-xs-4 col-sm-4">
                 <div class="form-group">
                     <label for="dateRead">Date Read</label>
-                    <input type="date" class="form-control" id="dateRead" placeholder="Date Read" name="dateRead" [(ngModel)]="updateBookForm.dateRead">
+                    <input type="date" class="form-control" id="dateRead" placeholder="Date Read" 
+                    name="dateRead" [(ngModel)]="updateBookForm.dateRead">
                 </div>
             </div>
+
             <div class="col-md-4 col-xs-4 col-sm-4">
                 <div class="form-group">
                     <label for="rate">Rate</label>
-                    <input type="number" min="0" max="5" class="form-control" id="rate" placeholder="Rate" name="rate" [(ngModel)]="updateBookForm.rate">
+                    <input type="number" min="0" max="5" class="form-control" id="rate" placeholder="Rate" 
+                    name="rate" [(ngModel)]="updateBookForm.rate">
                 </div>
             </div>
         </div>
+        
         <button class="btn btn-success mt-2 me-2" type="submit" [disabled]="form.invalid">Update</button>
         <button class="btn btn-default mt-2" [routerLink]="['/books']">Cancel</button>
     </form>
